--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 											<div class="center">GIT</div>
 									</div>
 									<div class="tile">
-											<div class="center">Rest API</div>
+											<div class="center">Web API</div>
 									</div>
 									<div class="tile">
 											<div class="center">SSIS</div>
